--- a/responsive-style.css
+++ b/responsive-style.css
@@ -24,6 +24,9 @@
         width: 61%;
         margin: auto ;
     }
+    .portfolio-wrapper .card{
+        min-height: 400px;
+    }
 }
 @media (max-width: 767px){
     h1{
@@ -44,6 +47,9 @@
     }
     .about-wrapper ul li .nav-link{
         font-size: 11px;
+    }
+    .portfolio-wrapper .card{
+        min-height: 500px;
     }
 }
 /* navbar */
