--- a/styles.css
+++ b/styles.css
@@ -236,3 +236,46 @@ button{
     box-shadow: 0px 2px 70px rgb(253 71 102/5%);
     transform: translateY(-5px);
 }
+/* Portfolio */
+.portfolio-wrapper .card{
+    height: 100%;
+    min-height: 350px;
+    overflow: hidden;
+    border: 1px solid #FFF;
+    cursor: pointer;
+    box-shadow: 0 0 16px 4px #152238 ;
+}
+.portfolio-wrapper .card span{
+    transition:background-position 4s ease-in-out 0s;
+    width: 100%;
+    height: 100%;
+    background-position: top center;
+    background-size: cover;
+}
+.portfolio-wrapper .card:hover span{
+    background-position: bottom center;
+}
+/* contact */
+.contact-wrapper .form-control, 
+.contact-wrapper textarea{
+    background-color: transparent;
+    border: 1px solid gainsboro;
+    color: gainsboro;
+    font-size: 15px;
+    font-weight: 400;
+    padding: 10px 20px;
+}
+.contact-wrapper .form-control:hover, 
+.contact-wrapper textarea:hover,
+.contact-wrapper .form-control:focus, 
+.contact-wrapper textarea:focus{
+    border-color: #eb4d4b;
+    color: #fff;
+}
+.contact-wrapper .call-details{
+    color: gray;
+}
+.contact-wrapper .call-details a{
+    color: gray;
+    font-weight: 700;
+}
