--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 body{
     background-color: #0e1525;
 }
+
 .nav-item a{
     color: #192a56;
 }
@@ -278,4 +279,39 @@ button{
 .contact-wrapper .call-details a{
     color: gray;
     font-weight: 700;
+}
+/* Footer */
+.footer-wrapper{
+    background-color: #152238;
+}
+.footer-wrapper .footer-logo img{
+    width: 100%;
+}
+.footer-logo{
+    width: 100px;
+}
+.footer-wrapper .social-icon a{
+    width: 35px;
+    height: 35px;
+    font-size: 14px;
+    display: inline-block;
+    border: 2px solid gray;
+    color: gray;
+    text-align: center;
+    border-radius: 100%;
+    -webkit-transition: all 0.3s cubic-bezier(0.645,0.045, 0.355,1); ;
+    transition: all 0.3s cubic-bezier(0.645,0.045, 0.355,1);
+}
+.footer-wrapper .social-icon a:hover{
+    background-color: #eb4d4b;
+    border-color: #eb4d4b;
+    color: #fff;
+    box-shadow: 0 10px 15px rgb(0 0 0/10%);
+    transform: translateY(-3px);
+}
+.footer-wrapper .copyright-text p{
+    font-size: 11px;
+}
+.footer-wrapper .copyright-text a{
+    color: #eb4d4b;
 }
